--- a/section/home/banner/css/embla.css
+++ b/section/home/banner/css/embla.css
@@ -16,8 +16,6 @@
     display: flex;
     touch-action: pan-y pinch-zoom;
     margin-left: calc(var(--slide-spacing) * -1);
-    width: 100vw;
-    height: 450px;
 }
 
 .embla__slide {
@@ -25,22 +23,12 @@
     flex: 0 0 var(--slide-size);
     min-width: 0;
     padding-left: var(--slide-spacing);
+    width: 80vw;
 }
 
-.embla__controls {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    justify-content: space-between;
-    gap: 1.2rem;
-    margin-top: 1.8rem;
-}
 
-.embla__buttons {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 0.6rem;
-    align-items: center;
-}
+
+
 
 .embla__button {
     -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
@@ -74,80 +62,38 @@
     height: 35%;
 }
 
-.embla__dots {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    align-items: center;
-    margin-right: calc((2.6rem - 1.4rem) / 2 * -1);
+.embla__parallax__layer {
+    position: relative;
 }
 
-.embla__dot {
-    -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
-    -webkit-appearance: none;
-    appearance: none;
-    background-color: transparent;
-    touch-action: manipulation;
-    display: inline-flex;
-    text-decoration: none;
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    margin: 0;
-    width: 2.6rem;
-    height: 2.6rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-}
-
-.embla__dot:after {
-    box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
-    width: 1.4rem;
-    height: 1.4rem;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    content: '';
-}
-
-.embla__dot--selected:after {
-    box-shadow: inset 0 0 0 0.2rem var(--text-body);
-}
-
-.embla__parallax {
-    border-radius: 0 1.8rem 1.8rem 0;
-    width: 100%;
-    height: 100%;
+.info-section {
+    background: linear-gradient(135deg, rgba(30, 30, 30, 0.9) 0%, rgba(50, 50, 50, 0.707) 100%);
+    backdrop-filter: blur(1px);
+    clip-path: polygon(0 0, 85% 0, 100% 50%, 85% 100%, 0 100%);
+    transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+    position: absolute;
     overflow: hidden;
 }
 
-.embla__parallax__layer {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.embla__parallax__img {
-    width: 100%;
-    height: 100% !important;
-    flex: 0 0 calc(115% + (var(--slide-spacing) * 2));
-    object-fit: cover;
-
+.info-section::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(135deg, rgba(30, 30, 30, 0.9) 0%, rgba(50, 50, 50, 0.85) 100%);
+    backdrop-filter: blur(5px);
+    z-index: -1;
 }
 
 
-.info-section {
-    background: rgba(71, 57, 57, 0.9);
-    /* shaffof fon */
-    clip-path: polygon(0% 0%, 75% 0%, 100% 48%, 90% 100%, 0% 100%);
-    z-index: 10;
+.group:hover .embla__parallax__img {
+    filter: brightness(1);
 }
 
-.info-section:hover {
-    transform: scale(1.05) rotate(-1deg);
-    transition: all 0.3s ease;
+.info-section-mobile {
+    background: linear-gradient(135deg, rgba(30, 30, 30, 0.9) 0%, rgba(50, 50, 50, 0.707) 100%);
+    backdrop-filter: blur(2px);
+    clip-path: polygon(54% 78%, 83% 71%, 100% 81%, 100% 100%, 24% 100%, 0% 100%, 0% 65%);
+    transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+    position: absolute;
+    overflow: hidden;
 }
